# speech_metrics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
src/speech_metrics/core/: preprocess.py
src/speech_metrics/indicmos/: metrics.py
src/speech_metrics/mos/: metrics.py
src/speech_metrics/scoreq/: metrics.py  model.py
src/speech_metrics/squim/: metrics.py
src/speech_metrics/vad/: metrics.py
tests/: test_indicmos.py  test_mos.py  test_scoreq.py  test_squim.py  test_vad.py
